--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,10 @@
     <string name="title_activity_request_permissions">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="app_require_permission">This application does not work without the permission to access to access your location at any time. Your information will not be sold to advertisers.</string>
-    <string name="allow_permissions">Allow Location Usage</string>
+    <string name="app_require_foreground_location">This application does not work without the permission to access to access your location.</string>
+    <string name="app_require_background_location">This application does not work without the permission to access to access your location in the background. Your information will not be sold to advertisers.</string>
+    <string name="allow_foreground_location">Allow Location</string>
+    <string name="allow_background_location">Allow Background Location</string>
     <string name="overview_window_title">Overview</string>
     <string name="map_icon">Map icon</string>
     <string name="please_sign_in">This application requires you to be logged in to utilize all of its features. Please sign in or sign up.</string>
