--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="required_field">Required field</string>
     <string name="hourly_wage">hourly wage</string>
     <string name="set_geofence">set geofence</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
